--- a/histora-care/src/app/shared/components/virtual-escort/virtual-escort.component.scss
+++ b/histora-care/src/app/shared/components/virtual-escort/virtual-escort.component.scss
@@ -69,7 +69,8 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 4px;
+    gap: 2px;
+    text-align: left;
 
     .title {
       font-size: 15px;
